syntax = "proto3";

package agent.v1;

message AskQuestionToolCall {
  AskQuestionArgs args = 1;
  AskQuestionResult result = 2;
}

message AskQuestionArgs {
  string title = 1;
  repeated AskQuestionArgs_Question questions = 2;
  bool run_async = 5;
  string async_original_tool_call_id = 6;
}

message AskQuestionArgs_Question {
  string id = 1;
  string prompt = 2;
  repeated AskQuestionArgs_Option options = 3;
  bool allow_multiple = 4;
}

message AskQuestionArgs_Option {
  string id = 1;
  string label = 2;
}

message AskQuestionAsync {
}

message AskQuestionResult {
  oneof result {
    AskQuestionSuccess success = 1;
    AskQuestionError error = 2;
    AskQuestionRejected rejected = 3;
    AskQuestionAsync async = 4;
  }
}

message AskQuestionSuccess {
  repeated AskQuestionSuccess_Answer answers = 1;
}

message AskQuestionSuccess_Answer {
  string question_id = 1;
  repeated string selected_option_ids = 2;
  string freeform_text = 3;
}

message AskQuestionError {
  string error_message = 1;
}

message AskQuestionRejected {
  string reason = 1;
}

message AskQuestionInteractionQuery {
  AskQuestionArgs args = 1;
  string tool_call_id = 2;
}

message AskQuestionInteractionResponse {
  AskQuestionResult result = 1;
}

message AsyncAskQuestionCompletionAction {
  string original_tool_call_id = 1;
  AskQuestionArgs original_args = 2;
  AskQuestionResult result = 3;
}
